--- a/blogs/exhibition-stand-builder-in-berlin/index.html
+++ b/blogs/exhibition-stand-builder-in-berlin/index.html
@@ -258,7 +258,7 @@
 
 
                                 <form action="index.html" autocomplete="off" id="contactForm">
-                                    <h3 class="title">Send Us a Message</h3>
+                                    <span class="text-white text-2xl text-center block mb-3">Send Us a Message</span>
         
                                     <div class="md:grid grid-cols-2 md:gap-4 ">
                                         <div class="input-container ">
@@ -332,10 +332,10 @@
         <div class="col-span-3 flex flex-col gap-3">
             <img src="/assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
             <div>
-                <p class="text-sm">
+                <span class="text-sm">
                     Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions, custom and unique stands are created by our talented graphic designers,
                     who carry your brand to world standards with years of knowledge and experience.
-                </p>
+                </span>
             </div>
         </div>
         <div class="col-span-2">
@@ -381,7 +381,7 @@
                             <i class="fa fa-envelope text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                         </div>
                         <div class="flex flex-col">
-                            <p class="font-semibold">info@standconstructions.com</p>
+                            <span class="font-semibold">info@standconstructions.com</span>
                             <span class="text-sm">Mail us</span>
                         </div>
                     </div>
@@ -390,7 +390,7 @@
                             <i class="fa fa-globe text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                         </div>
                         <div class="flex flex-col">
-                            <p class="font-semibold">standconstructions.com</p>
+                            <span class="font-semibold">standconstructions.com</span>
                             <span class="text-sm">Website</span>
                         </div>
                     </div>
@@ -399,7 +399,7 @@
                             <i class="fa fa-map-marker-alt text-xl bg-[#0076F9] px-4 py-2 rounded"></i>
                         </div>
                         <div class="flex flex-col">
-                            <p class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</p>
+                            <span class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</span>
                             <span class="text-sm">Located at</span>
                         </div>
                     </div>
