--- a/exhibition-stand-builder/germany/index.html
+++ b/exhibition-stand-builder/germany/index.html
@@ -283,8 +283,10 @@
                         <h1 class="md:text-6xl text-2xl text-center pt-10 text-white  mb-5">
                             EXHIBITION STAND BUILDER GERMANY
                         </h1>
-                        <p class="text-white md:text-xl mb-8">Exhibition Stand Designer, Builder & Contractor in Germany
-                        </p>
+                        <span class="text-white md:text-xl mb-8">Exhibition Stand Designer, Builder & Contractor in Germany
+                        </span>
+                        <br>
+                        <br>
                         <div class="md:flex  block md:justify-center  text-center gap-4 md:pb-36 pb-5">
                             <a href="#"
                                 class="relative inline-flex items-center justify-start py-3 pl-4 pr-12 overflow-hidden font-semibold text-[#0076F9] transition-all duration-150 ease-in-out rounded hover:pl-10 hover:pr-6 bg-gray-50 group mb-5">
@@ -771,7 +773,7 @@
 
 
                                 <form action="index.html" autocomplete="off" id="contactForm">
-                                    <h3 class="title">Send Us a Message</h3>
+                                    <span class="text-white text-2xl text-center block mb-3">Send Us a Message</span>
 
                                     <div class="md:grid grid-cols-2 md:gap-4 ">
                                         <div class="input-container ">
@@ -849,12 +851,12 @@
             <div class="col-span-3 flex flex-col gap-3">
                 <img src="/assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
                 <div>
-                    <p class="text-sm">
+                    <span class="text-sm">
                         Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with
                         equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions,
                         custom and unique stands are created by our talented graphic designers,
                         who carry your brand to world standards with years of knowledge and experience.
-                    </p>
+                    </span>
                 </div>
             </div>
             <div class="col-span-2">
@@ -905,7 +907,7 @@
                                 <i class="fa fa-envelope text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                             </div>
                             <div class="flex flex-col">
-                                <p class="font-semibold">info@standconstructions.com</p>
+                                <span class="font-semibold">info@standconstructions.com</span>
                                 <span class="text-sm">Mail us</span>
                             </div>
                         </div>
@@ -914,7 +916,7 @@
                                 <i class="fa fa-globe text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                             </div>
                             <div class="flex flex-col">
-                                <p class="font-semibold">standconstructions.com</p>
+                                <span class="font-semibold">standconstructions.com</span>
                                 <span class="text-sm">Website</span>
                             </div>
                         </div>
@@ -923,7 +925,7 @@
                                 <i class="fa fa-map-marker-alt text-xl bg-[#0076F9] px-4 py-2 rounded"></i>
                             </div>
                             <div class="flex flex-col">
-                                <p class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</p>
+                                <span class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</span>
                                 <span class="text-sm">Located at</span>
                             </div>
                         </div>
