--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@
                         <span class="circle two"></span>
 
                         <form action="index.html" autocomplete="off" id="contactForm">
-                            <h3 class="title">Send Us a Message</h3>
+                            <span class="text-white text-2xl text-center block md:my-3">Send Us a Message</span>
 
                             <div class="md:grid grid-cols-2 md:gap-4 ">
                                 <div class="input-container ">
