--- a/stand-design-and-booth-construction-company/berlin/index.html
+++ b/stand-design-and-booth-construction-company/berlin/index.html
@@ -362,7 +362,7 @@
                                 <span class="text-lg text-white">CLIENTS</span>
                             </div>
                         </div>
-                        <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
+                        <div class="four col-md-3 counterblur  ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-solid fa-user-tie  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -372,7 +372,7 @@
                                 <span class="text-lg text-white">Projects</span>
                             </div>
                         </div>
-                        <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
+                        <div class="four col-md-3 counterblur  ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-brands fa-playstation  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -387,7 +387,7 @@
                             </div>
                         </div>
                         <div
-                            class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300    ">
+                            class="four col-md-3 counterblur     ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-solid fa-object-group text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -459,9 +459,9 @@
                     </div>
 
                     <div class="col-start-2 col-span-4 ">
-                        <div class="text-center md:p-10 py-5">
+                        <div class="text-center md:p-10 py-5  bg-blue-100">
 
-                            <p class=" blurr_para  text-blue p-10 mb-3 bg-blue-100 rounded-xl">
+                            <p class=" blurr_para  text-blue p-10 mb-3 rounded-xl">
                                 Speaking of why you should opt for us as your exhibition stand design company in Berlin,
                                 we offer the services from start to end, including stand concept, customer approval,
                                 management of the fair, disassembly, and transportation of the exhibition stand. Our <a
@@ -491,10 +491,10 @@
                                 creating and delivering design solutions for our customers at the Berlin fair, as well
                                 as helping them promote their products at the fair.
                             </p>
-                            <h3 class="text-black md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN
+                            <h3 class="text-black md:text-3xl text-2xl ">HOW DO WE MAKE YOU STAND OUT AT AN
                                 EXHIBITION?</h3>
                             <p
-                                class="blurr_para md:p-10 p-5 mb-3 text-black bg-gradient-to-r from-cyan-200 to-blue-500 rounded-2xl">
+                                class="blurr_para md:p-10 p-5 mb-3 text-black">
                                 Stand Constructions offers exhibition stand design and build in Berlin, along with
                                 updates on under-building stand design, inspection, construction, demolition, and
                                 transportation. This allows us to serve our customers with complete transparency. For
@@ -552,7 +552,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -581,7 +581,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">Info Security Europe</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -610,7 +610,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">IWA Outdoor Classic</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -639,7 +639,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">BIOFACH</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -667,7 +667,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -688,6 +688,9 @@
                 </div>
             </div>
         </section>
+        <br>
+        <br>
+        <br>
 
 
 
@@ -743,7 +746,7 @@
                                 <span class="circle two"></span>
                                 
                                 <form action="index.html" autocomplete="off" id="contactForm">
-                                    <h3 class="title">Send Us a Message</h3>
+                                    <span class=" text-center block text-white my-2 text-2xl">Send Us a Message</span>
         
                                     <div class="md:grid grid-cols-2 md:gap-4 ">
                                         <div class="input-container ">
