--- a/stand-design-and-booth-construction-company/cologne/index.html
+++ b/stand-design-and-booth-construction-company/cologne/index.html
@@ -324,7 +324,7 @@
                     <div class="md:flex justify-center gap-7 ">
 
                         <div
-                            class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ease-in-out ">
+                            class="four col-md-3 counterblur   ">
                             <div class="counter-box rounded-2xl colored block md:p-10 text-center">
                                 <i
                                     class="fa-solid fa-earth-europe text-4xl m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -336,7 +336,7 @@
                                 <span class="text-lg text-white">CLIENTS</span>
                             </div>
                         </div>
-                        <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
+                        <div class="four col-md-3 counterblur   ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-solid fa-user-tie  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -346,7 +346,7 @@
                                 <span class="text-lg text-white">Projects</span>
                             </div>
                         </div>
-                        <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
+                        <div class="four col-md-3 counterblur   ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-brands fa-playstation  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -361,7 +361,7 @@
                             </div>
                         </div>
                         <div
-                            class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300    ">
+                            class="four col-md-3 counterblur    ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-solid fa-object-group text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -433,9 +433,9 @@
                     </div>
 
                     <div class="col-start-2 col-span-4 ">
-                        <div class="text-center md:p-10 py-3 ">
+                        <div class="text-center md:p-10 py-3  bg-blue-100">
 
-                            <p class=" blurr_para  text-blue p-10 mb-3 bg-blue-100 rounded-xl">
+                            <p class=" blurr_para  text-blue p-10 mb-3 rounded-xl">
                                 At Stand Constructions, we design to carry your brand to world standards by using years
                                 of knowledge and experience as we strive to provide our customers with innovative
                                 product design and field solutions according to their needs and market requirements. We
@@ -455,10 +455,10 @@
                                 big success. Our team of exhibition stand builders in Germany is certified and skilled
                                 enough to carry out first-rate work and layout extraordinary stands.
                             </p>
-                            <h3 class="tex-black md:text-3xl text-2xl my-10">HOW DO WE MAKE YOU STAND OUT AT AN
+                            <h3 class="tex-black md:text-3xl text-2xl ">HOW DO WE MAKE YOU STAND OUT AT AN
                                 EXHIBITION?</h3>
                             <p
-                                class="blurr_para md:p-10 p-5 mb-3 text-black bg-gradient-to-r from-cyan-200 to-blue-500 rounded-2xl">
+                                class="blurr_para md:p-10 p-5 mb-3 text-black rounded-2xl">
                                 We at Stand Constructions address the demanding situations and take away all the worries
                                 of the exhibitors. As an <b>exhibition stand builders company in Cologne</b>, we offer
                                 awesome offerings and a good way to assist excel at your showcase in Cologne. Our number
@@ -518,7 +518,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -547,7 +547,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">Info Security Europe</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -576,7 +576,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">IWA Outdoor Classic</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -604,7 +604,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">BIOFACH</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -632,7 +632,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -653,6 +653,9 @@
                 </div>
             </div>
         </section>
+        <br>
+        <br>
+        <br>
 
 
 
@@ -708,7 +711,7 @@
 
 
                                 <form action="index.html" autocomplete="off" id="contactForm">
-                                    <h3 class="title">Send Us a Message</h3>
+                                    <span class="text-center block text-white text-2xl my-2">Send Us a Message</span>
         
                                     <div class="md:grid grid-cols-2 md:gap-4 ">
                                         <div class="input-container ">
