--- a/stand-design-and-booth-construction-company/hamburg/index.html
+++ b/stand-design-and-booth-construction-company/hamburg/index.html
@@ -347,7 +347,7 @@
                     <div class="md:flex justify-center gap-7 ">
 
                         <div
-                            class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ease-in-out ">
+                            class="four col-md-3 counterblur  ">
                             <div class="counter-box rounded-2xl colored block md:p-10 text-center">
                                 <i
                                     class="fa-solid fa-earth-europe text-4xl m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -359,7 +359,7 @@
                                 <span class="text-lg text-white">CLIENTS</span>
                             </div>
                         </div>
-                        <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
+                        <div class="four col-md-3 counterblur">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-solid fa-user-tie  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -369,7 +369,7 @@
                                 <span class="text-lg text-white">Projects</span>
                             </div>
                         </div>
-                        <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
+                        <div class="four col-md-3 counterblur  ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-brands fa-playstation  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -384,7 +384,7 @@
                             </div>
                         </div>
                         <div
-                            class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300    ">
+                            class="four col-md-3 counterblur     ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-solid fa-object-group text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -406,40 +406,40 @@
         </section>
 
 
-        <section class="mb-10" id="portfolio">
-            <div class="px-[5%] text-center m-5 p-5 bg-gray-100 ">
-                <h3 class="md:text-4xl text-2xl mt-10">Some of Our Work That Excelled at the Exhibitions</h3>
+        <section class="mb-10  bg-gray-100" id="portfolio ">
+            <div class="px-[5%] text-center m-5 p-5 ">
+                <h3 class="md:text-4xl text-2xl mt-5">Some of Our Work That Excelled at the Exhibitions</h3>
 
                 <br />
                 <br />
                 <div class="grid md:grid-cols-3 gap-2 md:mx-10">
                     <div class="overflow-hidden  hover:bg-sky-700 boxes rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-1.webp" alt="portfolio-img-1" loading="lazy"
+                        <img src="../../assets/images/portfolio/one.webp" alt="portfolio-img-1" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000 inset-box-shadow   "
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-2.webp" alt="portfolio-img-2" loading="lazy"
+                        <img src="../../assets/images/portfolio/two.webp" alt="portfolio-img-2" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-3.webp" alt="portfolio-img-3" loading="lazy"
+                        <img src="../../assets/images/portfolio/three.webp" alt="portfolio-img-3" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-4.webp" alt="portfolio-img-4" loading="lazy"
+                        <img src="../../assets/images/portfolio/four.webp" alt="portfolio-img-4" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-5.webp" alt="portfolio-img-5" loading="lazy"
+                        <img src="../../assets/images/portfolio/five.webp" alt="portfolio-img-5" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-6.webp" alt="portfolio-img-6" loading="lazy"
+                        <img src="../../assets/images/portfolio/one.webp" alt="portfolio-img-6" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
@@ -447,6 +447,7 @@
                 </div>
             </div>
         </section>
+
 
         <section>
             <div class="ourwork bg-white">
@@ -519,37 +520,7 @@
 
                         <h2 class="text-4xl text-gray mt-4 pb-5">POPULAR UPCOMING EXHIBITIONS IN HAMBURG
                         </h2>
-                        <p class="text-sm">You may be interested in showcasing at these upcoming exhibitions in Hamburg.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                        </p>
+                        <p class="text-sm">You may be interested in showcasing at these upcoming exhibitions in Hamburg </p>
                     </div>
                     <div class="md:grid grid-cols-6 gap-4">
 
@@ -579,7 +550,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -608,7 +579,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">Info Security Europe</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -637,7 +608,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">IWA Outdoor Classic</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -666,7 +637,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">BIOFACH</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -695,7 +666,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -716,6 +687,9 @@
                 </div>
             </div>
         </section>
+        <br>
+        <br>
+        <br>
 
 
         <section class="contact_us bg-white">
@@ -770,7 +744,7 @@
 
 
                                 <form action="index.html" autocomplete="off" id="contactForm">
-                                    <h3 class="title">Send Us a Message</h3>
+                                    <span class="text-white text-center block text-2xl md:my-3">Send Us a Message</span>
 
                                     <div class="md:grid grid-cols-2 md:gap-4 ">
                                         <div class="input-container ">
