--- a/stand-design-and-booth-construction-company/munich/index.html
+++ b/stand-design-and-booth-construction-company/munich/index.html
@@ -355,7 +355,8 @@
                                 <span class="counter text-white block text-3xl leading-5">
                                     4650
                                     <sup>+</sup></span>
-                                <p class="text-lg text-white">CLIENTS</p>
+                                    <br>
+                                <span class="text-lg text-white">CLIENTS</span>
                             </div>
                         </div>
                         <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
@@ -364,7 +365,8 @@
                                     class="fa-solid fa-user-tie  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
 
                                 <span class="counter  text-white block text-3xl leading-5">14650+</span>
-                                <p class="text-lg text-white">Projects</p>
+                                <br>
+                                <span class="text-lg text-white">Projects</span>
                             </div>
                         </div>
                         <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
@@ -377,7 +379,8 @@
                                     6
                                     +
                                 </span>
-                                <p class="text-lg text-white">CONTINENTS</p>
+                                <br>
+                                <span class="text-lg text-white">CONTINENTS</span>
                             </div>
                         </div>
                         <div
@@ -390,7 +393,8 @@
                                     650
 
                                     +</span>
-                                <p class="text-lg text-white">EXHIBITIONS</p>
+                                    <br>
+                                <span class="text-lg text-white">EXHIBITIONS</span>
                             </div>
                         </div>
                     </div>
@@ -402,41 +406,40 @@
             <br>
         </section>
 
-
-        <section class="mb-10" id="portfolio">
-            <div class="px-[5%] text-center m-5 p-5 bg-gray-100 ">
-                <h3 class="md:text-4xl text-2xl  mt-10">Some of Our Work That Excelled at the Exhibitions</h3>
+        <section class="mb-10  bg-gray-100" id="portfolio ">
+            <div class="px-[5%] text-center m-5 p-5 ">
+                <h3 class="md:text-4xl text-2xl mt-5">Some of Our Work That Excelled at the Exhibitions</h3>
 
                 <br />
                 <br />
                 <div class="grid md:grid-cols-3 gap-2 md:mx-10">
-                    <div class="overflow-hidden  hover:bg-sky-700 boxes rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-1.webp" alt="portfolio-img-1" loading="lazy"
+                    <div class="overflow-hidden  hover:bg-sky-700 boxes rounded-2xl p-5">
+                        <img src="../../assets/images/portfolio/one.webp" alt="portfolio-img-1" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000 inset-box-shadow   "
                             onclick="openCustomModal()" />
                     </div>
-                    <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-2.webp" alt="portfolio-img-2" loading="lazy"
+                    <div class="overflow-hidden  hover:bg-sky-700  rounded-2xl p-5">
+                        <img src="../../assets/images/portfolio/two.webp" alt="portfolio-img-2" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
-                    <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-3.webp" alt="portfolio-img-3" loading="lazy"
+                    <div class="overflow-hidden  hover:bg-sky-700  rounded-2xl p-5">
+                        <img src="../../assets/images/portfolio/three.webp" alt="portfolio-img-3" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
-                    <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-4.webp" alt="portfolio-img-4" loading="lazy"
+                    <div class="overflow-hidden  hover:bg-sky-700  rounded-2xl p-5">
+                        <img src="../../assets/images/portfolio/four.webp" alt="portfolio-img-4" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
-                    <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-5.webp" alt="portfolio-img-5" loading="lazy"
+                    <div class="overflow-hidden  hover:bg-sky-700  rounded-2xl p-5">
+                        <img src="../../assets/images/portfolio/five.webp" alt="portfolio-img-5" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
-                    <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-6.webp" alt="portfolio-img-6" loading="lazy"
+                    <div class="overflow-hidden  hover:bg-sky-700  rounded-2xl p-5">
+                        <img src="../../assets/images/portfolio/one.webp" alt="portfolio-img-6" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
@@ -693,6 +696,9 @@
                 </div>
             </div>
         </section>
+        <br>
+        <br>
+        <br>
 
 
         <section class="contact_us bg-white">
@@ -700,7 +706,7 @@
                 <div>
                     <div class=" offset-md-1">
                         <div class="text-center pt-10">
-                            <span class=" text-gray-600 text-xl">[ Connect with COMPANY ]</span>
+                            <span class=" text-gray-600 text-xl">[ Connect with Company ]</span>
 
                         </div>
 
@@ -747,7 +753,7 @@
 
 
                                 <form action="index.html" autocomplete="off" id="contactForm">
-                                    <h3 class="title">Send Us a Message</h3>
+                                    <span class="text-white text-center text-2xl block md:my-3">Send Us a Message</span>
 
                                     <div class="md:grid grid-cols-2 md:gap-4 ">
                                         <div class="input-container ">
