--- a/stand-design-and-booth-construction-company/dortmund/index.html
+++ b/stand-design-and-booth-construction-company/dortmund/index.html
@@ -312,7 +312,7 @@
                     <div class="md:flex justify-center gap-7 ">
 
                         <div
-                            class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ease-in-out ">
+                            class="four col-md-3 counterblur   ">
                             <div class="counter-box rounded-2xl colored block md:p-10 text-center">
                                 <i
                                     class="fa-solid fa-earth-europe text-4xl m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -324,7 +324,7 @@
                                 <span class="text-lg text-white">CLIENTS</span>
                             </div>
                         </div>
-                        <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
+                        <div class="four col-md-3 counterblur  ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-solid fa-user-tie  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -334,7 +334,7 @@
                                 <span class="text-lg text-white">Projects</span>
                             </div>
                         </div>
-                        <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
+                        <div class="four col-md-3 counterblur ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-brands fa-playstation  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -349,7 +349,7 @@
                             </div>
                         </div>
                         <div
-                            class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300    ">
+                            class="four col-md-3 counterblur  ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-solid fa-object-group text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -514,7 +514,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -543,7 +543,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">Info Security Europe</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -572,7 +572,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">IWA Outdoor Classic</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -600,7 +600,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">BIOFACH</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -628,7 +628,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -649,6 +649,9 @@
                 </div>
             </div>
         </section>
+        <br>
+        <br>
+        <br>
 
 
 
@@ -656,14 +659,14 @@
             <div class="px-[3%]">
                 <div>
                     <div class=" offset-md-1">
-                        <div class="text-center pt-5">
-                            <span class="text-black text-xl">[ Connect with COMPANY ]</span>
+                        <div class="text-center pt-10">
+                            <span class="text-black text-xl">[ Connect with Company ]</span>
 
                         </div>
 
                     </div>
 
-                    <div class=" relative w-full  p-3 bg-white  mt-20
+                    <div class=" relative w-full  p-3 bg-white  mt-10
             flex justify-center">
                         <span class="big-circle"></span>
                         
@@ -704,7 +707,7 @@
 
 
                                 <form action="index.html" autocomplete="off" id="contactForm">
-                                    <h3 class="title">Send Us a Message</h3>
+                                    <span class="text-center block text-white my-2 text-2xl">Send Us a Message</span>
         
                                     <div class="md:grid grid-cols-2 md:gap-4 ">
                                         <div class="input-container ">
@@ -778,10 +781,10 @@
         <div class="col-span-3 flex flex-col gap-3">
             <img src="/assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
             <div>
-                <p class="text-sm">
+                <span class="text-sm">
                     Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions, custom and unique stands are created by our talented graphic designers,
                     who carry your brand to world standards with years of knowledge and experience.
-                </p>
+                </span>
             </div>
         </div>
         <div class="col-span-2">
@@ -827,7 +830,7 @@
                             <i class="fa fa-envelope text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                         </div>
                         <div class="flex flex-col">
-                            <p class="font-semibold">info@standconstructions.com</p>
+                            <span class="font-semibold">info@standconstructions.com</span>
                             <span class="text-sm">Mail us</span>
                         </div>
                     </div>
@@ -836,7 +839,7 @@
                             <i class="fa fa-globe text-xl bg-[#0076F9] px-3 py-2 rounded"></i>
                         </div>
                         <div class="flex flex-col">
-                            <p class="font-semibold">standconstructions.com</p>
+                            <span class="font-semibold">standconstructions.com</span>
                             <span class="text-sm">Website</span>
                         </div>
                     </div>
@@ -845,7 +848,7 @@
                             <i class="fa fa-map-marker-alt text-xl bg-[#0076F9] px-4 py-2 rounded"></i>
                         </div>
                         <div class="flex flex-col">
-                            <p class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</p>
+                            <span class="font-semibold">Poręba 13a, Jaraczewo, wielkopolskie 63-233, Poland</p>
                             <span class="text-sm">Located at</span>
                         </div>
                     </div>
@@ -861,7 +864,7 @@
 </div>
 <!-- /Footer-->
 <!-- Modal Structure -->
-<div id="customModal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center " style="z-index: 1000;">
+<div id="customModal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center  hidden justify-center " style="z-index: 1000;">
     <div class="relative bg-white rounded-lg overflow-hidden shadow-lg w-full max-w-5xl mx-auto flex justify-center items-center" style="max-height: 90vh;">
         <!-- Close Button -->
         <button onclick="closeCustomModal()" class="absolute top-4 right-4 text-white text-2xl z-10 bg-black rounded-full px-3 py-1">
