--- a/stand-design-and-booth-construction-company/dusseldorf/index.html
+++ b/stand-design-and-booth-construction-company/dusseldorf/index.html
@@ -323,7 +323,7 @@
                     <div class="md:flex justify-center gap-7 ">
 
                         <div
-                            class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ease-in-out ">
+                            class="four col-md-3 counterblur  ">
                             <div class="counter-box rounded-2xl colored block md:p-10 text-center">
                                 <i
                                     class="fa-solid fa-earth-europe text-4xl m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -335,7 +335,7 @@
                                 <span class="text-lg text-white">CLIENTS</span>
                             </div>
                         </div>
-                        <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
+                        <div class="four col-md-3 counterblur  ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-solid fa-user-tie  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -345,7 +345,7 @@
                                 <span class="text-lg text-white">Projects</span>
                             </div>
                         </div>
-                        <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
+                        <div class="four col-md-3 counterblur  ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-brands fa-playstation  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -360,7 +360,7 @@
                             </div>
                         </div>
                         <div
-                            class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300    ">
+                            class="four col-md-3 counterblur   ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-solid fa-object-group text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -382,9 +382,9 @@
         </section>
 
 
-        <section class="mb-10" id="portfolio">
-            <div class="px-[5%] text-center m-5 p-5 bg-gray-100 ">
-                <h3 class="md:text-4xl text-2xl font-bold mt-5">Some of Our Work That Excelled at the Exhibitions</h3>
+        <section class="mb-10  bg-gray-100" id="portfolio ">
+            <div class="px-[5%] text-center m-5 p-5 ">
+                <h3 class="md:text-4xl text-2xl mt-5">Some of Our Work That Excelled at the Exhibitions</h3>
 
                 <br />
                 <br />
@@ -515,7 +515,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -544,7 +544,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">Info Security Europe</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -573,7 +573,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">IWA Outdoor Classic</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -602,7 +602,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">BIOFACH</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -630,7 +630,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -651,6 +651,9 @@
                 </div>
             </div>
         </section>
+        <br>
+        <br>
+        <br>
 
 
         <section class="contact_us bg-white">
@@ -658,7 +661,7 @@
                 <div>
                     <div class=" offset-md-1">
                         <div class="text-center pt-10">
-                            <span class="text-black text-xl">[ Connect with company ]</span>
+                            <span class="text-black text-xl">[ Connect with Company ]</span>
 
                         </div>
 
@@ -705,7 +708,7 @@
 
 
                                 <form action="index.html" autocomplete="off" id="contactForm">
-                                    <h3 class="title">Send Us a Message</h3>
+                                    <span class="text-center block text-white text-2xl md:my-3">Send Us a Message</span>
         
                                     <div class="md:grid grid-cols-2 md:gap-4 ">
                                         <div class="input-container ">
