--- a/stand-design-and-booth-construction-company/nuremberg/index.html
+++ b/stand-design-and-booth-construction-company/nuremberg/index.html
@@ -413,40 +413,40 @@
         </section>
 
 
-        <section class="mb-10" id="portfolio">
-            <div class="px-[5%] text-center m-5 p-5 bg-gray-100 ">
-                <h3 class="md:text-4xl text-2xl  mt-10">Some of Our Work That Excelled at the Exhibitions</h3>
+        <section class="mb-10  bg-gray-100" id="portfolio ">
+            <div class="px-[5%] text-center m-5 p-5 ">
+                <h3 class="md:text-4xl text-2xl mt-5">Some of Our Work That Excelled at the Exhibitions</h3>
 
                 <br />
                 <br />
                 <div class="grid md:grid-cols-3 gap-2 md:mx-10">
-                    <div class="overflow-hidden  hover:bg-sky-700 boxes rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-1.webp" alt="portfolio-img-1" loading="lazy"
+                    <div class="overflow-hidden  hover:bg-sky-700 boxes rounded-2xl p-5">
+                        <img src="../../assets/images/portfolio/one.webp" alt="portfolio-img-1" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000 inset-box-shadow   "
                             onclick="openCustomModal()" />
                     </div>
-                    <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-2.webp" alt="portfolio-img-2" loading="lazy"
+                    <div class="overflow-hidden  hover:bg-sky-700  rounded-2xl p-5">
+                        <img src="../../assets/images/portfolio/two.webp" alt="portfolio-img-2" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
-                    <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-3.webp" alt="portfolio-img-3" loading="lazy"
+                    <div class="overflow-hidden  hover:bg-sky-700  rounded-2xl p-5">
+                        <img src="../../assets/images/portfolio/three.webp" alt="portfolio-img-3" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
-                    <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-4.webp" alt="portfolio-img-4" loading="lazy"
+                    <div class="overflow-hidden  hover:bg-sky-700  rounded-2xl p-5">
+                        <img src="../../assets/images/portfolio/four.webp" alt="portfolio-img-4" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
-                    <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-5.webp" alt="portfolio-img-5" loading="lazy"
+                    <div class="overflow-hidden  hover:bg-sky-700  rounded-2xl p-5">
+                        <img src="../../assets/images/portfolio/five.webp" alt="portfolio-img-5" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
-                    <div class="overflow-hidden rounded-2xl">
-                        <img src="../../assets/images/portfolio/portfolio-6.webp" alt="portfolio-img-6" loading="lazy"
+                    <div class="overflow-hidden  hover:bg-sky-700  rounded-2xl p-5">
+                        <img src="../../assets/images/portfolio/one.webp" alt="portfolio-img-6" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
@@ -454,7 +454,6 @@
                 </div>
             </div>
         </section>
-
         <section>
             <div class="ourwork bg-white">
                 <div class="px-[3%]">
@@ -527,22 +526,7 @@
 
                         <h2 class="text-4xl text-gray mt-4 pb-5">POPULAR UPCOMING EXHIBITION IN NUREMBERG
                         </h2>
-                        <p class="text-sm">You may be interested in showcasing these upcoming exhibitions in Nuremberg.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                        </p>
+                        <p class="text-sm">You may be interested in showcasing these upcoming exhibitions in Nuremberg. </p>
                     </div>
                     <div class="md:grid grid-cols-6 gap-4">
 
@@ -572,7 +556,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -601,7 +585,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">Info Security Europe</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -630,7 +614,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">IWA Outdoor Classic</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -659,7 +643,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">BIOFACH</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -688,7 +672,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -712,7 +696,7 @@
         <br>
         <br>
         <br>
-        <br>
+        
 
 
         <section class="contact_us bg-white">
@@ -720,7 +704,7 @@
                 <div>
                     <div class=" offset-md-1">
                         <div class="text-center pt-10">
-                            <span class=" text-gray-600 text-xl">[ Connect with COMPANY ]</span>
+                            <span class=" text-gray-600 text-xl">[ Connect with Company ]</span>
 
                         </div>
 
@@ -767,7 +751,7 @@
 
 
                                 <form action="index.html" autocomplete="off" id="contactForm">
-                                    <h3 class="title">Send Us a Message</h3>
+                                    <span class="text-white text-center block text-2xl md:my-3">Send Us a Message</span>
 
                                     <div class="md:grid grid-cols-2 md:gap-4 ">
                                         <div class="input-container ">
