--- a/stand-design-and-booth-construction-company/stuttgart/index.html
+++ b/stand-design-and-booth-construction-company/stuttgart/index.html
@@ -354,7 +354,7 @@
                     <div class="md:flex justify-center gap-7 ">
 
                         <div
-                            class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ease-in-out ">
+                            class="four col-md-3 counterblur  ">
                             <div class="counter-box rounded-2xl colored block md:p-10 text-center">
                                 <i
                                     class="fa-solid fa-earth-europe text-4xl m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -362,19 +362,21 @@
                                 <span class="counter text-white block text-3xl leading-5">
                                     4650
                                     <sup>+</sup></span>
-                                <p class="text-lg text-white">CLIENTS</p>
+                                    <br>
+                                <span class="text-lg text-white">CLIENTS</span>
                             </div>
                         </div>
-                        <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
+                        <div class="four col-md-3 counterblur  ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-solid fa-user-tie  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
 
                                 <span class="counter  text-white block text-3xl leading-5">14650+</span>
-                                <p class="text-lg text-white">Projects</p>
+                                <br>
+                                <span class="text-lg text-white">Projects</span>
                             </div>
                         </div>
-                        <div class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300 ">
+                        <div class="four col-md-3 counterblur">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-brands fa-playstation  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -384,11 +386,12 @@
                                     6
                                     +
                                 </span>
-                                <p class="text-lg text-white">CONTINENTS</p>
+                                <br>
+                                <span class="text-lg text-white">CONTINENTS</span>
                             </div>
                         </div>
                         <div
-                            class="four col-md-3 counterblur  hover:animate-pulse transition delay-150 duration-300    ">
+                            class="four col-md-3 counterblur     ">
                             <div class="counter-box block p-10 text-center">
                                 <i
                                     class="fa-solid fa-object-group text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
@@ -397,7 +400,8 @@
                                     650
 
                                     +</span>
-                                <p class="text-lg text-white">EXHIBITIONS</p>
+                                    <br>
+                                <span class="text-lg text-white">EXHIBITIONS</span>
                             </div>
                         </div>
                     </div>
@@ -525,26 +529,11 @@
 
                         <h2 class="md:text-4xl text-2xl text-gray mt-4 pb-5">POPULAR UPCOMING EXHIBITION IN STUTTGART
                         </h2>
-                        <p class="text-sm">You may be interested in showcasing these upcoming exhibitions in Stuttgart.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                        </p>
+                        <p class="text-sm">You may be interested in showcasing these upcoming exhibitions in Stuttgart.</p>
                     </div>
                     <div class="md:grid grid-cols-6 gap-4">
 
-                        <div class="col-start-2 col-span-4 ...">
+                        <div class="col-start-2 col-span-4">
                             <div class="swiper mySwiper">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide ">
@@ -570,7 +559,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -599,7 +588,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">Info Security Europe</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -628,7 +617,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">IWA Outdoor Classic</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -657,7 +646,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">BIOFACH</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -686,7 +675,7 @@
                                             <div class="relative text-white px-3 pb-6 mt-6">
                                                 <span class="block opacity-75 -mb-1">R+T</span>
                                                 <div class="flex justify-between">
-                                                    <span class="block font-semibold text-sm">Rottendem, Germany<br>
+                                                    <span class="block font-semibold text-sm m-auto">Rottendem, Germany<br>
                                                         24th Dec to 30th Dec 2025</span>
 
                                                 </div>
@@ -708,7 +697,8 @@
             </div>
         </section>
         <br>
-        <br><br>
+        <br>
+        <br>
 
 
         <section class="contact_us bg-white">
@@ -763,7 +753,7 @@
 
 
                                 <form action="index.html" autocomplete="off" id="contactForm">
-                                    <h3 class="title">Send Us a Message</h3>
+                                    <span class="text-white text-center text-2xl block md:my-3">Send Us a Message</span>
 
                                     <div class="md:grid grid-cols-2 md:gap-4 ">
                                         <div class="input-container ">
